hetzner/k8s/hotas_mappings/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apps-hotas-mappings
  labels:
    app.kubernetes.io/name: hotas-mappings
    app.kubernetes.io/managed-by: argocd
