hetzner/k8s/hotas_mappings/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hotas-mappings
  namespace: apps-hotas-mappings
  labels:
    app.kubernetes.io/name: hotas-mappings
    app.kubernetes.io/component: webserver
    app.kubernetes.io/managed-by: argocd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hotas-mappings
    app.kubernetes.io/component: webserver
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
